--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,13 +1,39 @@
 <!doctype html>
 <html>
+
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <script src="https://cdn.tailwindcss.com"></script>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://cdn.tailwindcss.com"></script>
+    <script>
+        tailwind.config = {
+          theme: {
+            extend: {
+              colors: {
+                color1: '#00d5d5',
+                color2: '#ec7a08',
+                color3: '#007363',
+                color4: '#00dbdd',
+                color5: '#c2c2c2',
+              }
+            }
+          }
+        }
+      </script>
 </head>
+
 <body>
-  <h1 class="text-3xl font-bold underline">
-    Hello world!
-  </h1>
+    <div id="container" class=" container mx-auto h-screen flex flex-col justify-center items-center">
+           <form id="login" class=" w-2/4 flex flex-col shadow-xl justify-center items-center rounded-xl p-10">
+            <img src="./img/caser_helvetia.png" class="w-1/3 h-2/4 text-center my-5" alt="logo">
+                <input type="text" class="w-2/4 border border-color5 rounded p-3 my-5" placeholder="Correo electrónico">
+                <input type="text" class="w-2/4 border border-color5 rounded p-3 my-5" placeholder="Contraseña">  
+                <input id="button-login" type="submit" value="Acceder" class="bg-color3 mt-5 text-white p-3 w-1/3 rounded-full cursor-pointer hover:opacity-90">
+           </form>
+           <a href="./html/registro.html" class="text-color3 mt-3">¿No tienes cuenta? Crear una cuenta</a>
+    </div>
+    <script src="./js/jquery/jquery-3.6.4.js"></script>
+    <script src="./js/jquery/jquery-3.6.4.min.js"></script>
+    <script src="./js/index.js"></script>
 </body>
 </html>
